<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_categories"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/nav_categories" />
    <item
        android:id="@+id/nav_developers"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_developers" />
    <item
        android:id="@+id/nav_rules"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/nav_rules" />
    <item
        android:id="@+id/nav_platform"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_platform" />
</menu>